--- a/media.html
+++ b/media.html
@@ -268,27 +268,36 @@
         <div class="row">
             <div class="column">
                 <div class="image-container">
-                    <img src="tv_image_1.jpg" alt="TV Image 1">
+                    <a href="https://www.dropout.tv/game-changer">
+                        <img src="images/media/tv/gchan.jpg" alt="Game Changer (Ongoing)">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://www.dropout.tv/game-changer">
+                <h3>Game Changer (Ongoing)</h3>
+                </a>
+                <p>"the only game show where the game changes every show" - I could watch this show forever</p>
             </div>
             <div class="column">
                 <div class="image-container">
-                    <img src="tv_image_2.jpg" alt="TV Image 2">
+                    <a href="https://en.wikipedia.org/wiki/3_Body_Problem_(TV_series)">
+                        <img src="images/media/tv/3bpro.jpg" alt="3 Body Problem (2024)">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://en.wikipedia.org/wiki/3_Body_Problem_(TV_series)">
+                <h3>3 Body Problem (2024)</h3>
+                </a>
+                <p>it's wonky as hell but it's got a lot to love</p>
             </div>
             <div class="column">
                 <div class="image-container">
-                    <img src="tv_image_3.jpg" alt="TV Image 3">
+                    <a href="https://www.dropout.tv/total-forgiveness">
+                        <img src="images/media/tv/tforg.jpg" alt="Total Forgiveness (2019)">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://www.dropout.tv/total-forgiveness">
+                <h3>Total Forgiveness (2019)</h3>
+                </a>
+                <p>ally and grant's tv experiment was no easier a watch the second time round, but it's as engaging as ever</p>
             </div>
         </div>
     </section>
@@ -300,27 +309,36 @@
         <div class="row">
             <div class="column">
                 <div class="image-container">
-                    <img src="movie_image_1.jpg" alt="Movie Image 1">
+                    <a href="https://en.wikipedia.org/wiki/Enys_Men">
+                        <img src="images/media/movies/emen.webp" alt="Enys Men (2023)">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://en.wikipedia.org/wiki/Enys_Men">
+                <h3>Enys Men (2023)</h3>
+                </a>
+                <p>much like in <i>Annihilation</i>, a scientist enters a mysterious coastal space and finds herself detached from the rules of reality. light on plot, heavy on vibes</p>
             </div>
             <div class="column">
                 <div class="image-container">
-                    <img src="movie_image_2.jpg" alt="Movie Image 2">
+                    <a href="https://www.dropout.tv/game-changer">
+                        <img src="images/media/tv/cwar.jpg" alt="Civil War (2024)">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://www.dropout.tv/game-changer">
+                <h3>Civil War (2024)</h3>
+                </a>
+                <p>"the only game show where the game changes every show" - I could watch this show forever</p>
             </div>
             <div class="column">
                 <div class="image-container">
-                    <img src="movie_image_3.jpg" alt="Movie Image 3">
+                    <a href="https://www.dropout.tv/game-changer">
+                        <img src="images/media/tv/gchan.jpg" alt="Game Changer">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://www.dropout.tv/game-changer">
+                <h3>Game Changer</h3>
+                </a>
+                <p>"the only game show where the game changes every show" - I could watch this show forever</p>
             </div>
         </div>
     </section>
