--- a/media.html
+++ b/media.html
@@ -321,7 +321,7 @@
             <div class="column">
                 <div class="image-container">
                     <a href="https://www.dropout.tv/game-changer">
-                        <img src="images/media/tv/cwar.jpg" alt="Civil War (2024)">
+                        <img src="images/media/movies/cwar.jpg" alt="Civil War (2024)">
                     </a>
                 </div>
                 <a href="https://www.dropout.tv/game-changer">
