--- a/media.html
+++ b/media.html
@@ -316,7 +316,7 @@
                 <a href="https://en.wikipedia.org/wiki/Enys_Men">
                 <h3>Enys Men (2023)</h3>
                 </a>
-                <p>much like in <i>Annihilation</i>, a scientist enters a mysterious coastal space and finds herself detached from the rules of reality. light on plot, heavy on vibes</p>
+                <p>as in <i>Annihilation</i>, a scientist enters a mysterious coastal space and finds herself detached from the rules of reality. light on plot, heavy on vibes</p>
             </div>
             <div class="column">
                 <div class="image-container">
