--- a/media.html
+++ b/media.html
@@ -194,7 +194,7 @@
 
     <!-- Title -->
     <h1>Media</h1>
-    <p>Music, TV and Movies I'm Loving - May, 2024 </p>
+    <p>Content I'm Loving - May, 2024 </p>
 
     <!-- Music Section -->
     <section id="Music">
