--- a/media.html
+++ b/media.html
@@ -171,6 +171,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li> 
             <li><a href="socials.html">Socials</a></li>
+            <li><a href="media.html">Media</a></li>
             <li><a href="projects.html">Projects</a></li>
         </ul>
     </div>
