--- a/media.html
+++ b/media.html
@@ -351,27 +351,36 @@
         <div class="row">
             <div class="column">
                 <div class="image-container">
-                    <img src="movie_image_1.jpg" alt="Movie Image 1">
+                    <a href="https://store.steampowered.com/app/1373960/INDIKA/">
+                        <img src="images/media/games/indik.jpg" alt="INDIKA (2024)">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://store.steampowered.com/app/1373960/INDIKA/">
+                <h3>INDIKA (20245)</h3>
+                </a>
+                <p>have only just started and i've never felt more like a quare peg forced through a round hole - </p>
             </div>
             <div class="column">
                 <div class="image-container">
-                    <img src="movie_image_2.jpg" alt="Movie Image 2">
+                    <a href="https://store.steampowered.com/app/493520/GTFO/">
+                        <img src="images/media/games/gtfo.webp" alt="GTFO (2021)">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://store.steampowered.com/app/493520/GTFO/">
+                <h3>GTFO (2021)</h3>
+                </a>
+                <p>dropped to the bottom of an monster-infested facility armed very few resources and visibility, and it's up to you to escape. this game is unrelenting</p>
             </div>
             <div class="column">
                 <div class="image-container">
-                    <img src="movie_image_3.jpg" alt="Movie Image 3">
+                    <a href="https://www.dropout.tv/game-changer">
+                        <img src="images/media/tv/gchan.jpg" alt="Game Changer">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://www.dropout.tv/game-changer">
+                <h3>Game Changer</h3>
+                </a>
+                <p>"the only game show where the game changes every show" - I could watch this show forever</p>
             </div>
         </div>
     </section>
