--- a/media.html
+++ b/media.html
@@ -358,7 +358,7 @@
                 <a href="https://store.steampowered.com/app/1373960/INDIKA/">
                 <h3>INDIKA (20245)</h3>
                 </a>
-                <p>have only just started and i've never felt more like a quare peg forced through a round hole - </p>
+                <p>have only just started and i've never felt more like a quare peg forced through a round hole - and i never know what the game is gonna do next</p>
             </div>
             <div class="column">
                 <div class="image-container">
