--- a/media.html
+++ b/media.html
@@ -321,15 +321,16 @@
             </div>
             <div class="column">
                 <div class="image-container">
-                    <a href="https://www.dropout.tv/game-changer">
+                    <a href="https://en.wikipedia.org/wiki/Civil_War_(film)">
                         <img src="images/media/movies/cwar.jpg" alt="Civil War (2024)">
                     </a>
                 </div>
-                <a href="https://www.dropout.tv/game-changer">
+                <a href="https://en.wikipedia.org/wiki/Civil_War_(film)">
                 <h3>Civil War (2024)</h3>
                 </a>
-                <p>"the only game show where the game changes every show" - I could watch this show forever</p>
+                <p>i'm still an Alex Garland fan and this didn't disappoint</p>
             </div>
+            <!--
             <div class="column">
                 <div class="image-container">
                     <a href="https://www.dropout.tv/game-changer">
@@ -341,6 +342,7 @@
                 </a>
                 <p>"the only game show where the game changes every show" - I could watch this show forever</p>
             </div>
+            -->
         </div>
     </section>
 
@@ -371,6 +373,7 @@
                 </a>
                 <p>dropped to the bottom of an monster-infested facility armed very few resources and visibility, and it's up to you to escape. this game is unrelenting</p>
             </div>
+            <!--
             <div class="column">
                 <div class="image-container">
                     <a href="https://www.dropout.tv/game-changer">
@@ -382,6 +385,7 @@
                 </a>
                 <p>"the only game show where the game changes every show" - I could watch this show forever</p>
             </div>
+            -->
         </div>
     </section>
 
@@ -389,6 +393,8 @@
     <section id="Books">
         <h2>Books</h2>
         <!-- Your books content here -->
+        <p>books to come</p>
+        <!--
         <div class="row">
             <div class="column">
                 <div class="image-container">
@@ -414,6 +420,7 @@
                 <h4>Hypnotic Brass Ensemble</h4>
                 <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
             </div>
+        -->
         </div>
     </section>
 </div>
