--- a/media.html
+++ b/media.html
@@ -311,7 +311,7 @@
             <div class="column">
                 <div class="image-container">
                     <a href="https://en.wikipedia.org/wiki/Enys_Men">
-                        <img src="images/media/movies/emen.webp" alt="Enys Men (2023)">
+                        <img src="images/media/movies/emen.jpg" alt="Enys Men (2023)">
                     </a>
                 </div>
                 <a href="https://en.wikipedia.org/wiki/Enys_Men">
@@ -330,17 +330,16 @@
                 </a>
                 <p>i'm still an Alex Garland fan and this didn't disappoint</p>
             </div>
-            <!--
             <div class="column">
                 <div class="image-container">
-                    <a href="https://www.dropout.tv/game-changer">
-                        <img src="images/media/tv/gchan.jpg" alt="Game Changer">
+                    <a href="https://watch.joelycett.com/">
+                        <img src="images/media/movies/mmmhd.jpg" alt="More, More, More! How Do You Lycett? How Do You Lycett? (2022)">
                     </a>
                 </div>
-                <a href="https://www.dropout.tv/game-changer">
-                <h3>Game Changer</h3>
+                <a href="https://watch.joelycett.com/">
+                <h3>More, More, More! How Do You Lycett? How Do You Lycett? (2022)</h3>
                 </a>
-                <p>"the only game show where the game changes every show" - I could watch this show forever</p>
+                <p>i'm a sucker for a comedy special with an overarching story and every step of the way this one pays off</p>
             </div>
             -->
         </div>
