--- a/media.html
+++ b/media.html
@@ -339,7 +339,7 @@
                 <a href="https://watch.joelycett.com/">
                 <h3>More, More, More! How Do You Lycett? How Do You Lycett? (2022)</h3>
                 </a>
-                <p>i'm a sucker for a comedy special with an overarching story and every step of the way this one pays off</p>
+                <p>i'm a sucker for a comedy special with an overarching story and every step of the way this one pays off - it legitimately brought a tear to my eye</p>
             </div>
         </div>
     </section>
