--- a/canvas.html
+++ b/canvas.html
@@ -27,50 +27,70 @@
 
         // Particle class
         class Particle {
-            constructor(x, y, radius, color, speed) {
+            constructor(x, y, radius, color, speed, distance) {
                 this.x = x;
                 this.y = y;
                 this.radius = radius;
                 this.color = color;
                 this.speed = speed;
                 this.radians = Math.random() * Math.PI * 2;
+                this.distance = distance;
+                this.lastMouse = { x: x, y: y };
             }
 
-            update() {
+            update(lastMouse) {
                 this.radians += this.speed;
-                this.x = x + Math.cos(this.radians) * 100;
-                this.y = y + Math.sin(this.radians) * 100;
-                this.draw();
+
+                // Circular motion
+                this.lastMouse.x += (mouse.x - this.lastMouse.x) * 0.05;
+                this.lastMouse.y += (mouse.y - this.lastMouse.y) * 0.05;
+                this.x = this.lastMouse.x + Math.cos(this.radians) * this.distance;
+                this.y = this.lastMouse.y + Math.sin(this.radians) * this.distance;
+                this.draw(lastMouse);
             }
 
-            draw() {
+            draw(lastMouse) {
                 ctx.beginPath();
-                ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2, false);
-                ctx.fillStyle = this.color;
-                ctx.fill();
+                ctx.strokeStyle = this.color;
+                ctx.lineWidth = this.radius;
+                ctx.moveTo(lastMouse.x, lastMouse.y);
+                ctx.lineTo(this.x, this.y);
+                ctx.stroke();
                 ctx.closePath();
             }
         }
+
+        let mouse = {
+            x: innerWidth / 2,
+            y: innerHeight / 2
+        };
+
+        window.addEventListener('mousemove', (event) => {
+            mouse.x = event.clientX;
+            mouse.y = event.clientY;
+        });
 
         // Create particles
         const particles = [];
         const numParticles = 100;
 
         for (let i = 0; i < numParticles; i++) {
-            const radius = Math.random() * 3 + 1;
+            const radius = Math.random() * 2 + 1;
             const x = canvas.width / 2;
             const y = canvas.height / 2;
             const color = i % 2 === 0 ? '#FFFF00' : (i % 3 === 0 ? '#000' : '#808080');
             const speed = Math.random() * 0.02 + 0.01;
-            particles.push(new Particle(x, y, radius, color, speed));
+            const distance = Math.random() * 100 + 50;
+            particles.push(new Particle(x, y, radius, color, speed, distance));
         }
 
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
             particles.forEach(particle => {
-                particle.update();
+                particle.update(mouse);
             });
         }
 
