--- a/three.html
+++ b/three.html
@@ -31,11 +31,6 @@
 
         for (let i = 0; i < numParticles; i++) {
             const particle = new THREE.Mesh(particleGeometry, particleMaterial);
-            const angle = Math.random() * Math.PI * 2;
-            const radiusX = 10;
-            const radiusY = 5;
-            particle.position.x = Math.cos(angle) * radiusX;
-            particle.position.y = Math.sin(angle) * radiusY;
             particles.push(particle);
             scene.add(particle);
         }
@@ -46,9 +41,9 @@
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
-            particles.forEach(particle => {
+            particles.forEach((particle, index) => {
                 // Update particle positions along elliptical path
-                const angle = Math.atan2(particle.position.y, particle.position.x) + 0.01;
+                const angle = (index / numParticles) * Math.PI * 2;
                 const radiusX = 10;
                 const radiusY = 5;
                 particle.position.x = Math.cos(angle) * radiusX;
