--- a/three.html
+++ b/three.html
@@ -3,56 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smooth Elliptical Particle Swarm Animation</title>
+    <title>Yellow Swirl Animation</title>
     <style>
-        body {
+        body, canvas {
             margin: 0;
-            overflow: hidden;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #000;
         }
     </style>
 </head>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <canvas id="canvas"></canvas>
+
     <script>
-        // Set up Three.js scene
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
+        const canvas = document.getElementById('canvas');
+        const ctx = canvas.getContext('2d');
 
-        // Create particle geometry and material
-        const particleGeometry = new THREE.SphereGeometry(0.1, 32, 32);
-        const particleMaterial = new THREE.MeshBasicMaterial({ color: 0xffff00 });
+        // Set canvas dimensions
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
 
-        // Create particle system
-        const numParticles = 100;
-        const particles = [];
+        // Particle class
+        class Particle {
+            constructor(x, y, radius, color, speed, distance) {
+                this.x = x;
+                this.y = y;
+                this.radius = radius;
+                this.color = color;
+                this.speed = speed;
+                this.radians = Math.random() * Math.PI * 2;
+                this.distance = distance;
+                this.lastMouse = { x: x, y: y };
+            }
 
-        for (let i = 0; i < numParticles; i++) {
-            const particle = new THREE.Mesh(particleGeometry, particleMaterial);
-            particles.push(particle);
-            scene.add(particle);
+            update(lastMouse) {
+                this.radians += this.speed;
+
+                // Circular motion
+                this.lastMouse.x += (mouse.x - this.lastMouse.x) * 0.05;
+                this.lastMouse.y += (mouse.y - this.lastMouse.y) * 0.05;
+                this.x = this.lastMouse.x + Math.cos(this.radians) * this.distance;
+                this.y = this.lastMouse.y + Math.sin(this.radians) * this.distance;
+                this.draw(lastMouse);
+            }
+
+            draw(lastMouse) {
+                ctx.beginPath();
+                ctx.strokeStyle = this.color;
+                ctx.lineWidth = this.radius;
+                ctx.moveTo(lastMouse.x, lastMouse.y);
+                ctx.lineTo(this.x, this.y);
+                ctx.stroke();
+                ctx.closePath();
+            }
         }
 
-        // Set up camera
-        camera.position.z = 20;
+        let mouse = {
+            x: innerWidth / 2,
+            y: innerHeight / 2
+        };
+
+        window.addEventListener('mousemove', (event) => {
+            mouse.x = event.clientX;
+            mouse.y = event.clientY;
+        });
+
+        // Create particles
+        const particles = [];
+        const numParticles = 100;
+
+        for (let i = 0; i < numParticles; i++) {
+            const radius = Math.random() * 2 + 1;
+            const x = canvas.width / 2;
+            const y = canvas.height / 2;
+            const color = i % 2 === 0 ? '#FFFF00' : (i % 3 === 0 ? '#000' : '#808080');
+            const speed = Math.random() * 0.02 + 0.01;
+            const distance = Math.random() * 100 + 50;
+            particles.push(new Particle(x, y, radius, color, speed, distance));
+        }
 
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
-            const time = Date.now() * 0.001; // Convert milliseconds to seconds
-            particles.forEach((particle, index) => {
-                // Update particle positions along elliptical path
-                const angle = (index / numParticles) * Math.PI * 2;
-                const radiusX = 10;
-                const radiusY = 5;
-                const xOffset = Math.cos(time + index * 0.1) * 0.5; // Add oscillation to X position
-                const yOffset = Math.sin(time + index * 0.1) * 0.5; // Add oscillation to Y position
-                particle.position.x = Math.cos(angle) * radiusX + xOffset;
-                particle.position.y = Math.sin(angle) * radiusY + yOffset;
+            ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+            particles.forEach(particle => {
+                particle.update(mouse);
             });
-            renderer.render(scene, camera);
         }
 
         animate();
