--- a/three.html
+++ b/three.html
@@ -3,95 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yellow Swirl Animation</title>
+    <title>3D Particle Swarm Animation</title>
     <style>
-        body, canvas {
+        body {
             margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #000;
+            overflow: hidden;
         }
     </style>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
-        const canvas = document.getElementById('canvas');
-        const ctx = canvas.getContext('2d');
+        // Set up Three.js scene
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
 
-        // Set canvas dimensions
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
+        // Create particle geometry and material
+        const particleGeometry = new THREE.SphereGeometry(0.1, 32, 32);
+        const particleMaterial = new THREE.MeshBasicMaterial({ color: 0xffff00 });
 
-        // Particle class
-        class Particle {
-            constructor(x, y, radius, color, speed, distance) {
-                this.x = x;
-                this.y = y;
-                this.radius = radius;
-                this.color = color;
-                this.speed = speed;
-                this.radians = Math.random() * Math.PI * 2;
-                this.distance = distance;
-                this.lastMouse = { x: x, y: y };
-            }
-
-            update(lastMouse) {
-                this.radians += this.speed;
-
-                // Circular motion
-                this.lastMouse.x += (mouse.x - this.lastMouse.x) * 0.05;
-                this.lastMouse.y += (mouse.y - this.lastMouse.y) * 0.05;
-                this.x = this.lastMouse.x + Math.cos(this.radians) * this.distance;
-                this.y = this.lastMouse.y + Math.sin(this.radians) * this.distance;
-                this.draw(lastMouse);
-            }
-
-            draw(lastMouse) {
-                ctx.beginPath();
-                ctx.strokeStyle = this.color;
-                ctx.lineWidth = this.radius;
-                ctx.moveTo(lastMouse.x, lastMouse.y);
-                ctx.lineTo(this.x, this.y);
-                ctx.stroke();
-                ctx.closePath();
-            }
-        }
-
-        let mouse = {
-            x: innerWidth / 2,
-            y: innerHeight / 2
-        };
-
-        window.addEventListener('mousemove', (event) => {
-            mouse.x = event.clientX;
-            mouse.y = event.clientY;
-        });
-
-        // Create particles
-        const particles = [];
+        // Create particle system
         const numParticles = 100;
+        const particles = [];
 
         for (let i = 0; i < numParticles; i++) {
-            const radius = Math.random() * 2 + 1;
-            const x = canvas.width / 2;
-            const y = canvas.height / 2;
-            const color = i % 2 === 0 ? '#FFFF00' : (i % 3 === 0 ? '#000' : '#808080');
-            const speed = Math.random() * 0.02 + 0.01;
-            const distance = Math.random() * 100 + 50;
-            particles.push(new Particle(x, y, radius, color, speed, distance));
+            const particle = new THREE.Mesh(particleGeometry, particleMaterial);
+            particle.position.x = Math.random() * 20 - 10;
+            particle.position.y = Math.random() * 20 - 10;
+            particle.position.z = Math.random() * 20 - 10;
+            particles.push(particle);
+            scene.add(particle);
         }
+
+        // Set up camera
+        camera.position.z = 5;
 
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
-            ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
             particles.forEach(particle => {
-                particle.update(mouse);
+                // Update particle positions with slower movement
+                particle.position.x += Math.random() * 0.01 - 0.005;
+                particle.position.y += Math.random() * 0.01 - 0.005;
+                particle.position.z += Math.random() * 0.01 - 0.005;
+
+                // Wrap particles around the screen
+                if (particle.position.x < -10) particle.position.x = 10;
+                if (particle.position.x > 10) particle.position.x = -10;
+                if (particle.position.y < -10) particle.position.y = 10;
+                if (particle.position.y > 10) particle.position.y = -10;
+                if (particle.position.z < -10) particle.position.z = 10;
+                if (particle.position.z > 10) particle.position.z = -10;
             });
+            renderer.render(scene, camera);
         }
 
         animate();
