--- a/media.html
+++ b/media.html
@@ -209,9 +209,8 @@
                     </a>
                 </div>
                 <a href="https://hypn0ticbrass.bandcamp.com/album/this-is-a-mindfulness-drill-a-reimagining-of-richard-youngs-sapphie">
-                    <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021)</h3>
+                    <h4>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021) - Hypnotic Brass Ensemble</h4>
                 </a>
-                <h4>Hypnotic Brass Ensemble</h4>
                 <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
             </div>
             <div class="column">
@@ -221,9 +220,8 @@
                     </a>
                 </div>
                 <a href="https://futureislands.bandcamp.com/album/people-who-aren-t-there-anymore">
-                    <h3>People Who Aren’t There Anymore (2024)</h3>
+                    <h4>People Who Aren’t There Anymore (2024) - Future Islands</h4>
                 </a>
-                <h4>Future Islands</h4>
                 <p>this album has copped a bit of flak online, but it's a solid Future Islands record to me</p>
             </div>
             <div class="column">
@@ -233,9 +231,8 @@
                     </a>
                 </div>
                 <a href="https://kamasiwashington.bandcamp.com/album/fearless-movement">
-                    <h3>Fearless Movement (2024)</h3>
+                    <h4>Fearless Movement (2024) - Kamasi Washington</h4>
                 </a>
-                <h4>Kamasi Washington</h4>
                 <p>huge record with so many different movements, arrangements, and feelings</p>
             </div>
         </div>    
@@ -243,21 +240,33 @@
         <div class="row">
             <div class="column">
                 <div class="image-container">
-                    <img src="images/media/music/funde.webp" alt="Filthy Underneath (2024)">
+                    <a href="https://en.wikipedia.org/wiki/Filthy_Underneath">
+                        <img src="images/media/music/funde.webp" alt="Filthy Underneath (2024)">
+                    </a>
                 </div>
-                <h4>Filthy Underneath (2024) - Nadine Shah</h4>
+                    <a href="https://en.wikipedia.org/wiki/Filthy_Underneath">
+                        <h4>Filthy Underneath (2024) - Nadine Shah</h4>
+                    </a>
             </div>
             <div class="column">
                 <div class="image-container">
-                    <img src="images/media/music/hovvd.webp" alt="Hovvdy (2024)">
+                    <a href="https://sprintsmusic.bandcamp.com/album/letter-to-self">
+                        <img src="images/media/music/ltsel.jpg" alt="Letter to Self (2024)">
+                    </a>
                 </div>
-                <h4>Hovvdy (2024) - Hovvdy</h4>
+                <a href="https://sprintsmusic.bandcamp.com/album/letter-to-self">
+                    <h4>Letter To Self (2024) - Sprints</h4>
+                </a>
             </div>
             <div class="column">
                 <div class="image-container">
-                    <img src="images/media/music/hyper.webp" alt="Hyperdrama (2024)">
+                    <a href="https://etjusticepourtous.bandcamp.com/album/hyperdrama">
+                        <img src="images/media/music/hyper.webp" alt="Hyperdrama (2024)">
+                    </a>
                 </div>
-                <h4>Hyperdrama (2024) - Justice</h4>
+                    <a href="https://etjusticepourtous.bandcamp.com/album/hyperdrama">
+                        <h4>Hyperdrama (2024) - Justice</h4>
+                    </a>
             </div>
         </div>
     </section>
