--- a/three.html
+++ b/three.html
@@ -51,6 +51,7 @@
             greyParticle.position.x = Math.random() * 20 - 10;
             greyParticle.position.y = Math.random() * 20 - 10;
             greyParticle.position.z = Math.random() * 20 - 10;
+            particles.push(greyParticle); // Add to particles array
             greyParticles.push(greyParticle);
             scene.add(greyParticle);
 
@@ -65,6 +66,7 @@
             blackParticle.position.x = Math.random() * 20 - 10;
             blackParticle.position.y = Math.random() * 20 - 10;
             blackParticle.position.z = Math.random() * 20 - 10;
+            particles.push(blackParticle); // Add to particles array
             blackParticles.push(blackParticle);
             scene.add(blackParticle);
 
@@ -73,6 +75,7 @@
             yellowParticle.position.x = Math.random() * 20 - 10;
             yellowParticle.position.y = Math.random() * 20 - 10;
             yellowParticle.position.z = Math.random() * 20 - 10;
+            particles.push(yellowParticle); // Add to particles array
             yellowParticles.push(yellowParticle);
             scene.add(yellowParticle);
         }
